--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -1,18 +1,16 @@
 .background {
   background-image: url("../../img/home.jpg");
   background-position: center;
-  /* background-repeat: repeat; */
   background-size: cover;
-  min-height: 100vh;
+  /* background-repeat: repeat; */
   /* viewport ocupa todo el tamaño disponible */
-  width: 100vw;
-  height: 100%;
-  /* display: flex;
-  flex-direction: column;
-  justify-content: center; */
+  min-height: 100vh;
+
   animation: kenburns-top-left 5s ease-out both;
+  padding: 20px;
 }
 .nav {
+  /* width: 200px; */
   display: flex;
   justify-content: space-between;
   align-items: center;
